--- a/index.html
+++ b/index.html
@@ -18,12 +18,15 @@
           <input type="text" id="side2" placeholder="length of side two">
           <input type="text" id="side3" placeholder="length of side three">
         </div>
+        <br>
         <button id="submit" type="submit" class="btn btn-success">Tell me about this triangle</button>
       </form>
+      <br>
       <div id="results" class="well">
-        <div><ul id="sides-entered"></ul></div>
-        <div id="triangle"></div>
-        <div id="tri-info"></div>
+        <div><h3><ul id="sides-entered"></ul></h3></div>
+        <div class="well"><h3 id="triangle"></h3>
+        <div><h3 id="tri-info"></h3></div>
+      </div>
       </div>
     </div>
   </body>
