--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <div><h3 id="tri-info"></h3></div>
       </div>
       </div>
+      <svg height="200" width="200" id="canvas"></svg>
     </div>
   </body>
 </html>
