Fix append svg triangle

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <button id="submit" type="submit" class="btn btn-success">Tell me about this triangle</button>
       </form>
       <br>
-      <svg height="200" width="200" id="canvas"></svg>
+      <div id="canvas"></div>
       <br>
       <div id="results" class="well">
         <div><h3><ul id="sides-entered"></ul></h3></div>
